--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,19 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
-<html>
-  {% include head.html %}
+<html lang="pt-br">
+  <head>
+    {% include head.html %}
 
-  <body>
-    {% include header.html %}
-
-    <div class="content-wrapper">
-      <div class="content-wrapper__inner">
-        {{ content }}
-      </div>
-
+    <meta name="robots" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+    <meta name="googlebot" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+  </head>
+  <body class="{{ page.slug }}">
+    <main class="main">
+      {% include header.html %}
+      {{ content }}
       {% include footer.html %}
-    </div>
+    </main>
   </body>
 </html>
