--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,15 +1,19 @@
-<nav class="pagination" role="navigation">
-  {% if paginator.previous_page %}
-    {% if paginator.previous_page == 1 %}
-      <a rel="prev" class="posts newer btn small" href="{{ "#blog" | prepend: site.baseurl }}" title="Previous Page">← Newer Posts</a>
-    {% else %}
-      <a rel="prev" class="posts newer btn small" href="{{ site.baseurl }}page{{ paginator.previous_page }}/">← Newer Posts</a>
-    {% endif %}
-  {% endif %}
+<div class="container">
+  <nav class="pagination" role="pagination">
+    <ul>
+      {% if paginator.previous_page %}
+        {% if paginator.previous_page == 1 %}
+        <li><a class="newer-posts" href="{{ site.baseurl }}/">&laquo;</a></li>
+        {% else %}
+        <li><a class="newer-posts" href="{{ site.baseurl }}/page/{{ paginator.previous_page }}/">&laquo;</a></li>
+        {% endif %}
+      {% endif %}
 
-  <span class="pagination__page-number">Page {{ paginator.page}} of {{ paginator.total_pages}}</span>
+      <li><span class="page-number">Page {{paginator.page}} of {{paginator.total_pages}}</span></li>
 
-  {% if paginator.next_page %}
-    <a rel="next" class="posts older btn small" href="{{ site.baseurl }}page{{ paginator.next_page }}/">Older Posts →</a>
-  {% endif %}
-</nav>
+      {% if paginator.next_page %}
+      <li><a class="older-posts" href="{{ site.baseurl }}/page/{{ paginator.next_page }}/">&raquo;</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+</div>
