--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-<article class="post-container post-container--single">
-
+<article class="post container card">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
-
-  <section class="post">
+  <div class="post-content">
     {{ content }}
-  </section>
-
+  </div>
 </article>
