--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       <h1 class="title">
-        <a href="{{ site.baseurl }}/">{{ site.title }}</a> <small>v2</small>
+        <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </h1>
 
       <nav class="navbar">
@@ -21,7 +21,7 @@
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}
           {% endfor %}
-          <li><a href="{{ site.author.url }}/about" target="_blank">the autor</a></li>
+          <!-- <li><a href="{{ site.author.url }}/about" target="_blank">the autor</a></li> -->
           <li><a href="{{ site.github }}" target="_blank">Github</a></li>
         </ul>
       </nav>
