--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 
     {% if page.slug == 'home' %}
       <h2 class="txt-center">
-        Welcome to <strong>{{ site.title }}</strong>!
+        自己的优秀，是最坚实的靠山!
       </h2>
     {% endif %}
 
