--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}
           {% endfor %}
-          <li><a href="{{ site.author.url }}/about">autor</a></li>
+          <li><a href="https://www.baidu.com">autor</a></li>
           <li><a href="{{ site.github }}" target="_blank">Github</a></li>
         </ul>
       </nav>
