--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,12 +16,13 @@
         </a>
 
         <ul class="nav">
-          {% for page in site.pages %}
+          <!-- {% for page in site.pages %}
             {% if page.title and page.title != 'Home' %}
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}
-          {% endfor %}
-          <li><a href="/author">autor</a></li>
+          {% endfor %} -->
+          <li><a href="https://zsfbradleyjohnson.github.io">Johnson</a></li>
+          <li><a href="/author">author</a></li>
           <li><a href="{{ site.github }}" target="_blank">Github</a></li>
         </ul>
       </nav>
