--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
             {% endif %}
           {% endfor %} -->
           <li><a href="/about">about</a></li>
-          <!-- <li><a href="/auth or">author</a></li> -->
+          <li><a href="/author">author</a></li>
           <li><a href="{{ site.github }}" target="_blank">Github</a></li>
         </ul>
       </nav>
