--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
             <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
             {% endif %}
           {% endfor %} -->
-          <li><a href="/about">about</a></li>
+          <!-- <li><a href="/about">about</a></li> -->
           <li><a href="/author">author</a></li>
           <li><a href="{{ site.github }}" target="_blank">Github</a></li>
         </ul>
