--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ slug: single
 
     <aside class="share">
 
-      <span>Share this: </span>
+      <!-- <span>Share this: </span>
 
       <a href="http://twitter.com/share?text={{page.title}}&amp;url={{site.url}}{{ page.url }}&amp;hashtags=web,dev,blog,soudev&amp;via=nandomoreirame"
       onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
@@ -27,11 +27,11 @@ slug: single
       <a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}"
       onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
         <i class="fa fa-facebook-square"></i>
-      </a>
+      </a> -->
 
     </aside>
 
-    {% include comments.html %}
+    <!-- {% include comments.html %} -->
 
   </div>
 </article>
