--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,7 @@
 
     {% if page.slug == 'home' %}
       <h2 class="txt-center">
-        自己优秀，是最坚实的依靠!
+        优秀，是最坚实的依靠!
       </h2>
     {% endif %}
 
