--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-        
+
         <!-- Bootstrap core CSS -->
     	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
@@ -23,34 +23,34 @@
 
 			<div class="col-sm-3">
 				<h1>{{ site.name }}</h1>
-				<img id="about" src="{{ site.baseurl }}/img/logo.jpg" height="75px" width="75px" /><br />	
+				<img id="about" src="{{ site.baseurl }}/img/logo.jpg" height="75px" width="75px" /><br />
 
-				<strong>navigation</strong><br />
-				<a href="{{ site.baseurl }}/">home</a> <br />
+				<!-- <strong>navigation</strong><br /> -->
+				<a href="{{ site.baseurl }}/">主页</a> <br />
 				{% for i in site.urls %}
 					<a class="about" href="{{ i.url }}">{{ i.text }}</a><br />
 				{% endfor %}
-				
+
 				{% if site.about %}
 				<div id="about">
-					<strong>about</strong><br />
+					<strong>关于</strong><br />
 					{{ site.about }}
 				</div>
 				{% endif %}
 			</div>
 
 			<div class="col-sm-8 col-offset-1">
-				
+
 				{{ content }}
-				
-				<footer>
+
+<!-- 				<footer>
 					&copy; {{ site.name }}
-					{% if site.github %} 
+					{% if site.github %}
 						- <a href="{{ site.github }}">{{ site.github }}</a>
 					{% endif %}
-				</footer>
+				</footer> -->
 			</div>
-		
+
 		</div>
 
 	<!-- Bootstrap core JavaScript
