--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 		<div class="container">
 
 			<div class="col-sm-3">
-				<h1>{{ site.name }}</h1>
-				<img id="about" src="{{ site.baseurl }}/img/logo.jpg" height="75px" width="75px" /><br />
+				<h1 style="font-size=14;">{{ site.name }}</h1>
+				<img id="about" src="{{ site.baseurl }}/img/bradleyjohnson.jpg" height="75px" width="75px" /><br />
 
 				<!-- <strong>navigation</strong><br /> -->
 				<a href="{{ site.baseurl }}/">主页</a> <br />
