--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
 			<div class="col-sm-3">
 				<h1 style="font-size=14;">{{ site.name }}</h1>
-				<img id="about" src="{{ site.baseurl }}/img/bradleyjohnson.jpg" height="75px" width="75px" /><br />
+				<img id="about" src="{{ site.baseurl }}/img/bradleyJohnson.jpg" height="75px" width="75px" /><br />
 
 				<!-- <strong>navigation</strong><br /> -->
 				<a href="{{ site.baseurl }}/">主页</a> <br />
