--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<div class="container">
 
 			<div class="col-sm-3">
-				<h1 style="font-size=14;">{{ site.name }}</h1>
+				<h1 style="font-size=14px;">{{ site.name }}</h1>
 				<img id="about" src="{{ site.baseurl }}/img/bradleyJohnson.jpg" height="75px" width="75px" /><br />
 
 				<!-- <strong>navigation</strong><br /> -->
