--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,62 +1,19 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>{% if page.title %} {{ page.title }} {% else %} {{ site.name }} {% endif %}</title>
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="pt-br">
+  <head>
+    {% include head.html %}
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-
-        <!-- Bootstrap core CSS -->
-    	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-
-    </head>
-    <body>
-
-		<div class="container">
-
-			<div class="col-sm-3">
-				<h1 style="font-size=14px;">{{ site.name }}</h1>
-				<img id="about" src="{{ site.baseurl }}/img/bradleyJohnson.jpg" height="75px" width="75px" /><br />
-
-				<!-- <strong>navigation</strong><br /> -->
-				<a href="{{ site.baseurl }}/">主页</a> <br />
-				{% for i in site.urls %}
-					<a class="about" href="{{ i.url }}">{{ i.text }}</a><br />
-				{% endfor %}
-
-				{% if site.about %}
-				<div id="about">
-					<strong>关于</strong><br />
-					{{ site.about }}
-				</div>
-				{% endif %}
-			</div>
-
-			<div class="col-sm-8 col-offset-1">
-
-				{{ content }}
-
-<!-- 				<footer>
-					&copy; {{ site.name }}
-					{% if site.github %}
-						- <a href="{{ site.github }}">{{ site.github }}</a>
-					{% endif %}
-				</footer> -->
-			</div>
-
-		</div>
-
-	<!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    </body>
+    <meta name="robots" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+    <meta name="googlebot" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+  </head>
+  <body class="{{ page.slug }}">
+    <main class="main">
+      {% include header.html %}
+      {{ content }}
+      {% include footer.html %}
+    </main>
+  </body>
 </html>
